WIP: pre-upgrade checkpoint